# HiTPoly

./: LICENSE  README.md  builder_ligpargen_openmm.py  building.py  pyproject.toml  run_analysis.py  run_analysis_openmm.py  run_analysis_openmm_copolymer.py  run_box_builder.py  run_copolymer_box_builder.py  setup.py
data/: polymer_folders_T415_DFT.csv  polymer_folders_T415_LPG.csv
data/forcefield_files/: lammps_FSI_q100.data  lammps_Li_q100.data  lammps_NO3_q100.data  lammps_Na_q100.data  lammps_PF6_q100.data  lammps_SN_q100.data  lammps_TFSI_q100.data  lammps_Zn_q100.data
data/forcefield_files/DFT_charges/: 1APEO.csv  3BPEO.csv  C2EO5.csv  C4EO4.csv  C6EO4.csv  CSSAX1.csv  PCL.csv  PDMPC.csv  PEC.csv  PEO.csv  PEO2MO.csv  PEPC.csv  PES23.csv  PETE3.csv  PPM.csv  PPO.csv  PPS2.csv  SC.csv  SIMEPH.csv  SIMEPR.csv  SiMEME.csv
data/forcefield_files/LIT_charges/: PEO.csv
hitpoly/: check_amounts.py
hitpoly/analysis/: coordination_analysis.py  gromacs_edr_analysis.py  trajectory_analysis.py  trajectory_analysis_copolymer.py
hitpoly/data/: builder.py  ff_file_reader.py  initialize_discrete_params.py
hitpoly/models/: forcefield.py  model.py  termnets.py
hitpoly/simulations/: gromacs_writer.py  openmm_scripts.py
hitpoly/utils/: args.py  building_utils.py  constants.py  geometry_calc.py  nn_utils.py  plotting.py  train_utils.py  useful_math.py
hitpoly/writers/: box_builder.py  copolymer_box_builder.py  file_writers.py
